--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nivo/bar": "^0.80.0",
     "@nivo/core": "^0.80.0",
     "@nivo/parallel-coordinates": "^0.80.0",
+    "@nivo/pie": "^0.80.0",
     "@nivo/tooltip": "0.80.0",
     "@nivo/treemap": "^0.80.0",
     "@tanstack/react-query": "^4.28.0",
